2002-01-14  Patrick Burke  <takhisisii@yahoo.com.au>
	* configure.in: Added --enable-paranoid-warnings, only tested with
	gcc3.0.3, so some of the warnings might not exist in previous versions,
	so might potentially cause problems, and if so, might need some
	version checking code.
	* conf/*, usecode/ucxt/*: Removed all warnings created by the above,
	and added $(WARNINGS) to their respective Makefile.am's.
	* files/rwregress.cc, Makefile.am: Just a quick regression tester,
	currently for the Read*(istream &) series of functions. Found it
	useful when 'fixing' files/utils.h.
	* files/utils.h: Theoretically 'optimised' the Read*(istream &) series
	of functions, and removed all the warnings generated by
	--enable-paranoid-warnings.

2002-01-14  Ryan Nunn  <triforce@merlin.net.au>
	* audio/Audio.cc : Force waveout as defualt for Windows. Don't use
	  DirectSound as it's buggy with SDL.

2002-01-14  Tristan Tarrant  <nadir@users.sourceforge.net>
	* vec.h: explicity typename

2002-01-14  Tristan Tarrant  <nadir@users.sourceforge.net>
	* Makefile.MorphOS, README.AmigaOS, README.MorphOS, 
	  audio/midi_drivers/amiga_midi.*, cheat_screen.cc,
	  files/listfiles.cc, files/utils.cc, version.cc, fnames.h, 
	  audio/Midi.cc: changes by Ruediger Hanke for MorphOS/AmigaOS support
	* data/credits.txt: credit where credit is due
	* configure.in: search for ext/hash_set and ext/hash_map
	* hash_utils.h: changes for cvs GCC
	* pathfinder.cc, shapes/shapeinf.cc: include hash_utils.h instead
	of doing the same tests over and over

2002-01-13  Jeff Freedman  <jeff@amy.nerble.net>

	* exult.cc: Show tiles where dragged object's footprint will lie.

	* xdrag.cc (Xdnd): Redesigning so it can provide more visual
	feedback during the drag.

2002-01-13  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* conf/XMLEntity.*: fixed uninitialized no_close
	
2002-01-11  Jeff Freedman  <jeff@amy.nerble.net>

	* gamemap.cc,shapes/shapeinf.h: quality_flags, okay_to_take.
