@@ -8943,21 +8943,51 @@ Poison
 	    </child>
 
 	    <widget>
-	      <class>GtkSpinButton</class>
-	      <name>shinfo_monster_equip</name>
-	      <can_focus>True</can_focus>
-	      <climb_rate>1</climb_rate>
-	      <digits>0</digits>
-	      <numeric>False</numeric>
-	      <update_policy>GTK_UPDATE_ALWAYS</update_policy>
-	      <snap>False</snap>
-	      <wrap>False</wrap>
-	      <value>0</value>
-	      <lower>0</lower>
-	      <upper>100</upper>
-	      <step>1</step>
-	      <page>4</page>
-	      <page_size>4</page_size>
+	      <class>GtkHBox</class>
+	      <name>hbox22</name>
+	      <homogeneous>False</homogeneous>
+	      <spacing>0</spacing>
+
+	      <widget>
+		<class>GtkSpinButton</class>
+		<name>shinfo_monster_equip</name>
+		<can_focus>True</can_focus>
+		<climb_rate>1</climb_rate>
+		<digits>0</digits>
+		<numeric>False</numeric>
+		<update_policy>GTK_UPDATE_ALWAYS</update_policy>
+		<snap>False</snap>
+		<wrap>False</wrap>
+		<value>0</value>
+		<lower>0</lower>
+		<upper>100</upper>
+		<step>1</step>
+		<page>4</page>
+		<page_size>4</page_size>
+		<child>
+		  <padding>0</padding>
+		  <expand>True</expand>
+		  <fill>True</fill>
+		</child>
+	      </widget>
+
+	      <widget>
+		<class>GtkButton</class>
+		<name>open_equip_button</name>
+		<border_width>4</border_width>
+		<can_focus>True</can_focus>
+		<signal>
+		  <name>clicked</name>
+		  <handler>on_open_equip_button_clicked</handler>
+		  <last_modification_time>Wed, 16 Jan 2002 07:05:29 GMT</last_modification_time>
+		</signal>
+		<label>Edit</label>
+		<child>
+		  <padding>0</padding>
+		  <expand>False</expand>
+		  <fill>False</fill>
+		</child>
+	      </widget>
 	    </widget>
 	  </widget>
 
@@ -9695,6 +9725,11 @@ Random
   <class>GtkWindow</class>
   <name>equip_window</name>
   <visible>False</visible>
+  <signal>
+    <name>delete_event</name>
+    <handler>on_equip_window_delete_event</handler>
+    <last_modification_time>Wed, 16 Jan 2002 06:58:49 GMT</last_modification_time>
+  </signal>
   <title>Monster Equipment</title>
   <type>GTK_WINDOW_TOPLEVEL</type>
   <position>GTK_WIN_POS_NONE</position>
@@ -9710,10 +9745,43 @@ Random
     <spacing>0</spacing>
 
     <widget>
+      <class>GtkFrame</class>
+      <name>frame112</name>
+      <border_width>4</border_width>
+      <label>Record #</label>
+      <label_xalign>0</label_xalign>
+      <shadow_type>GTK_SHADOW_ETCHED_IN</shadow_type>
+      <child>
+	<padding>0</padding>
+	<expand>False</expand>
+	<fill>False</fill>
+      </child>
+
+      <widget>
+	<class>GtkSpinButton</class>
+	<name>equip_recnum</name>
+	<can_focus>True</can_focus>
+	<climb_rate>1</climb_rate>
+	<digits>0</digits>
+	<numeric>False</numeric>
+	<update_policy>GTK_UPDATE_ALWAYS</update_policy>
+	<snap>False</snap>
+	<wrap>False</wrap>
+	<value>0</value>
+	<lower>0</lower>
+	<upper>100</upper>
+	<step>1</step>
+	<page>10</page>
+	<page_size>10</page_size>
+      </widget>
+    </widget>
+
+    <widget>
       <class>GtkScrolledWindow</class>
       <name>scrolledwindow3</name>
+      <height>220</height>
       <hscrollbar_policy>GTK_POLICY_NEVER</hscrollbar_policy>
-      <vscrollbar_policy>GTK_POLICY_AUTOMATIC</vscrollbar_policy>
+      <vscrollbar_policy>GTK_POLICY_ALWAYS</vscrollbar_policy>
       <hupdate_policy>GTK_UPDATE_CONTINUOUS</hupdate_policy>
       <vupdate_policy>GTK_UPDATE_CONTINUOUS</vupdate_policy>
       <child>
@@ -9728,10 +9796,39 @@ Random
 	<shadow_type>GTK_SHADOW_IN</shadow_type>
 
 	<widget>
-	  <class>GtkVBox</class>
-	  <name>vbox24</name>
+	  <class>GtkTable</class>
+	  <name>equip_table</name>
+	  <rows>1</rows>
+	  <columns>1</columns>
 	  <homogeneous>False</homogeneous>
-	  <spacing>0</spacing>
+	  <row_spacing>0</row_spacing>
+	  <column_spacing>0</column_spacing>
+
+	  <widget>
+	    <class>GtkLabel</class>
+	    <name>label69</name>
+	    <label></label>
+	    <justify>GTK_JUSTIFY_CENTER</justify>
+	    <wrap>False</wrap>
+	    <xalign>0.5</xalign>
+	    <yalign>0.5</yalign>
+	    <xpad>0</xpad>
+	    <ypad>0</ypad>
+	    <child>
+	      <left_attach>0</left_attach>
+	      <right_attach>1</right_attach>
+	      <top_attach>0</top_attach>
+	      <bottom_attach>1</bottom_attach>
+	      <xpad>0</xpad>
+	      <ypad>0</ypad>
+	      <xexpand>False</xexpand>
+	      <yexpand>False</yexpand>
+	      <xshrink>False</xshrink>
+	      <yshrink>False</yshrink>
+	      <xfill>False</xfill>
+	      <yfill>False</yfill>
+	    </child>
+	  </widget>
 	</widget>
       </widget>
     </widget>
@@ -9769,9 +9866,14 @@ Random
 
       <widget>
 	<class>GtkButton</class>
-	<name>button34</name>
+	<name>equip_cancel</name>
 	<can_default>True</can_default>
 	<can_focus>True</can_focus>
+	<signal>
+	  <name>clicked</name>
+	  <handler>on_equip_cancel_clicked</handler>
+	  <last_modification_time>Wed, 16 Jan 2002 06:59:58 GMT</last_modification_time>
+	</signal>
 	<label>Cancel</label>
       </widget>
     </widget>
