@@ -198,7 +198,8 @@ ExultStudio::ExultStudio(int argc, char **argv): ifile(0), names(0),
 	static_path(0), browser(0), palbuf(0), egg_monster_draw(0), 
 	egg_ctx(0),
 	waiting_for_server(0), npcwin(0), npc_draw(0), npc_face_draw(0),
-	npc_ctx(0), objwin(0), obj_draw(0), shapewin(0), shape_draw(0)
+	npc_ctx(0), objwin(0), obj_draw(0), shapewin(0), shape_draw(0),
+	equipwin(0)
 {
 	// Initialize the various subsystems
 	self = this;
@@ -273,6 +274,9 @@ ExultStudio::~ExultStudio()
 		gtk_widget_destroy(shapewin);
 	delete shape_draw;
 	shapewin = 0;
+	if (equipwin)
+		gtk_widget_destroy(equipwin);
+	equipwin = 0;
 	delete vgafile;
 	delete facefile;
 	delete chunkfile;
